<resources>
    <string name="app_name">Mirea App</string>
    <string name="mirea_logo">Mirea Logo</string>
    <string name="bank">BANK</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="card_text_field">Number of your card</string>
    <string name="password_text_field">Password</string>
    <string name="full_name">Full name</string>
    <string name="dateBirth">Date of Birth</string>
    <string name="home">Home</string>
    <string name="convert">Convert</string>
    <string name="settings">Settings</string>
    <string name="your_cards">Your Cards:</string>
    <string name="card_1">Card 1</string>
    <string name="number">Number:</string>
    <string name="NumberOfCard1">3213 1233 7384 8192</string>
    <string name="pin">PIN:</string>
    <string name="pinCard1">1234</string>
    <string name="date">DATE:</string>
    <string name="dateCard1">12/23</string>
    <string name="cvc2_cvv2">CVC2/CVV2:</string>
    <string name="cvcCard1">100</string>
    <string name="card_2">Card 2</string>
    <string name="numberOfCard2">1233 4341 5423 6543</string>
    <string name="pinCard2">8979</string>
    <string name="dateCard2">09/24</string>
    <string name="cvvCard2">432</string>
    <string name="mir_logo">mir logo</string>
    <string name="addCardButton">ADD CARD</string>
    <string name="crypto_icon">crypto icon</string>
    <string name="add_money">ADD MONEY</string>
    <string name="currency_transfer">Currency transfer</string>
    <string name="btc">BTC</string>
    <string name="card1CurrencyValue">...?</string>
    <string name="eth">ETH</string>
    <string name="ltc">LTC</string>
    <string name="circle_avatar">Circle avatar</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="change_password">Change password</string>
    <string name="total_amount_of_money">Total amount of money:</string>
    <string name="amount_of_money">... $</string>
    <string name="change">Change</string>
    <string name="old_passsword">Old passsword</string>
    <string name="new_password">New password</string>
    <string name="hint_card_1">Card 1</string>
    <string name="add_money_card1">Add Money</string>
    <string name="card_2_hint">Card 2</string>
    <string name="back">Back</string>
    <string name="email_number">Email number</string>
    <string name="email_number1">Email number</string>
    <string name="log_out">Log out</string>
</resources>