<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@drawable/gradient_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/bankLogoImageView"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mirea_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428"
            app:srcCompat="@drawable/bank_logo_image" />



        <TextView
            android:id="@+id/bankText"
            android:layout_width="214dp"
            android:layout_height="71dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/medium_italic"
            android:gravity="center"
            android:layerType="none"
            android:text="@string/bank"
            android:textColor="@color/lightGreen"
            android:textSize="64sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bankLogoImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="51dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="326dp"
            android:layout_height="55dp"
            android:background="@drawable/round_textfield"
            android:ems="10"
            android:fontFamily="@font/medium_italic"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:letterSpacing="0.02"
            android:maxLength="16"
            android:paddingStart="23dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="326dp"
            android:layout_height="55dp"
            android:layout_marginTop="36dp"
            android:autofillHints="no"
            android:background="@drawable/round_textfield"
            android:ems="10"
            android:fontFamily="@font/medium_italic"
            app:errorEnabled="true"
            android:hint="@string/email_number"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.02"
            android:paddingStart="23dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="326dp"
            android:layout_height="55dp"
            android:layout_marginTop="36dp"
            android:autofillHints="no"
            android:background="@drawable/round_textfield"
            android:ems="10"
            android:fontFamily="@font/medium_italic"
            android:hint="@string/password_text_field"
            android:inputType="textPassword"
            android:letterSpacing="0.02"
            android:paddingStart="23dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="326dp"
            android:layout_height="55dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/round_textfield"
            android:ems="10"
            android:fontFamily="@font/medium_italic"
            android:hint="@string/password_text_field"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:letterSpacing="0.02"
            android:paddingStart="23dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />



    </LinearLayout>

    <Button
        android:id="@+id/signupButton"

        android:layout_width="228sp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/bold_italic"
        android:text="@string/sign_up"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>